--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,13 @@
         android:id="@+id/textview_simulator"/>
 
     <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/test_button"
+        android:text="Test"
+        android:onClick="testModel"/>
+
+    <Button
         android:id="@+id/btn_force_land"
         style="@style/common_button"
         android:layout_width="wrap_content"
