--- a/app/src/main/res/layout/fragment_camera2.xml
+++ b/app/src/main/res/layout/fragment_camera2.xml
@@ -12,11 +12,19 @@
         android:layout_alignParentTop="true" />
 
     <FrameLayout
-        android:id="@+id/control"
+        android:id="@+id/controller"
         android:layout_width="match_parent"
-        android:layout_height="112dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/texture"
+        android:layout_alignStart="@+id/texture"
+        android:background="@color/control_background">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_blank_fragment"
+            android:layout_gravity="center"
+            />
 
     </FrameLayout>
 
