--- a/app/src/main/res/layout/fragment_camera2.xml
+++ b/app/src/main/res/layout/fragment_camera2.xml
@@ -20,6 +20,7 @@
         android:background="@color/control_background">
 
         <TextView
+            android:id="@+id/simpleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hello_blank_fragment"
