--- a/app/src/main/res/layout/fragment_camera2.xml
+++ b/app/src/main/res/layout/fragment_camera2.xml
@@ -27,6 +27,25 @@
             android:layout_gravity="center"
             />
 
+        <com.example.nermi.djidronepilot.OnScreenJoystick
+            android:id="@+id/directionJoystickRight"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="bottom|end"
+
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="10dp"
+            android:background="@mipmap/joystick_bg"/>
+
+        <com.example.nermi.djidronepilot.OnScreenJoystick
+            android:id="@+id/directionJoystickLeft"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="bottom|start"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@mipmap/joystick_bg"/>
+
     </FrameLayout>
 
 </RelativeLayout>
