--- a/app/src/main/res/layout/fragment_camera2.xml
+++ b/app/src/main/res/layout/fragment_camera2.xml
@@ -12,6 +12,43 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
+    <FrameLayout
+        android:id="@+id/controller"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/texture"
+        android:layout_alignStart="@+id/texture"
+        android:background="@color/control_background">
+
+        <TextView
+            android:id="@+id/simpleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_blank_fragment"
+            android:layout_gravity="center"
+            />
+
+        <com.example.nermi.djilib.OnScreenJoystick
+            android:id="@+id/directionJoystickRight"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="bottom|end"
+
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="10dp"
+            android:background="@mipmap/joystick_bg"/>
+
+        <com.example.nermi.djilib.OnScreenJoystick
+            android:id="@+id/directionJoystickLeft"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="bottom|start"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@mipmap/joystick_bg"/>
+
+    </FrameLayout>
+
 
 
 </RelativeLayout>
