--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -11,6 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#000"
-        tools:context="com.example.nermi.djidronepilot.CameraActivity" />
+        tools:context="com.nermi.djidronepilot.CameraActivity" />
 
 </LinearLayout>
