--- a/dailib/src/main/res/layout/fragment_camera2.xml
+++ b/dailib/src/main/res/layout/fragment_camera2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.example.nermi.djidronepilot.AutoFitTextureView
+    <com.nermi.dailib.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
             android:layout_gravity="center"
             />
 
-        <com.example.nermi.dailib.OnScreenJoystick
+        <com.nermi.dailib.OnScreenJoystick
             android:id="@+id/directionJoystickRight"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -38,7 +38,7 @@
             android:layout_marginStart="10dp"
             android:background="@mipmap/joystick_bg"/>
 
-        <com.example.nermi.dailib.OnScreenJoystick
+        <com.nermi.dailib.OnScreenJoystick
             android:id="@+id/directionJoystickLeft"
             android:layout_width="100dp"
             android:layout_height="100dp"
